[gd_scene load_steps=9 format=3 uid="uid://vwnktl8hivfu"]

[ext_resource type="FontFile" uid="uid://gh3mknrglbsr" path="res://Resources/font/The Wild Breath of Zelda.otf" id="1_7b16u"]
[ext_resource type="FontFile" uid="uid://plk2ssnqqgfy" path="res://Resources/font/MotionControl-Bold.otf" id="1_7kebq"]
[ext_resource type="Script" path="res://Scripts/menu/score_board.gd" id="1_ql3l4"]
[ext_resource type="AudioStream" uid="uid://dmkakomdg1w5x" path="res://Resources/sound/JRPG Piano.mp3" id="4_in0uv"]
[ext_resource type="AudioStream" uid="uid://dapt6hwr4h0r2" path="res://Resources/sound/menu_sfx/menu_hover.wav" id="5_3q52k"]
[ext_resource type="AudioStream" uid="uid://bonopwd1xuju2" path="res://Resources/sound/menu_sfx/menu_select.wav" id="6_aby0i"]
[ext_resource type="AudioStream" uid="uid://yhf2h45cockg" path="res://Resources/sound/menu_sfx/press_to_start.wav" id="7_r4hsr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gguew"]
bg_color = Color(1, 1, 1, 1)

[node name="ScoreBoard" type="Control"]
layout_mode = 3
anchor_top = 0.002
anchor_bottom = 0.002
offset_top = -1.296
offset_bottom = -0.296
script = ExtResource("1_ql3l4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1153.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gguew")

[node name="Rank" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 907.0
offset_top = 103.0
offset_right = 993.0
offset_bottom = 144.0
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 40
text = "Rank: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueS" type="Label" parent="Panel"]
visible = false
layout_mode = 2
offset_left = 1005.0
offset_top = 79.0
offset_right = 1048.0
offset_bottom = 174.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7b16u")
theme_override_font_sizes/font_size = 90
text = "S
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueA" type="Label" parent="Panel"]
visible = false
layout_mode = 2
offset_left = 1005.0
offset_top = 79.0
offset_right = 1048.0
offset_bottom = 174.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7b16u")
theme_override_font_sizes/font_size = 90
text = "A
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueB" type="Label" parent="Panel"]
visible = false
layout_mode = 2
offset_left = 1005.0
offset_top = 79.0
offset_right = 1048.0
offset_bottom = 174.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.221797, 0.566935, 0.483199, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7b16u")
theme_override_font_sizes/font_size = 90
text = "B
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueC" type="Label" parent="Panel"]
visible = false
layout_mode = 2
offset_left = 1005.0
offset_top = 79.0
offset_right = 1048.0
offset_bottom = 174.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.898714, 0.579658, 7.70092e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7b16u")
theme_override_font_sizes/font_size = 90
text = "C
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankValueD" type="Label" parent="Panel"]
visible = false
layout_mode = 2
offset_left = 1005.0
offset_top = 79.0
offset_right = 1048.0
offset_bottom = 174.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.770439, 3.70607e-06, 4.81307e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7b16u")
theme_override_font_sizes/font_size = 90
text = "D

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 310.0
offset_top = 225.0
offset_right = 357.0
offset_bottom = 256.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Time"

[node name="TimeValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 471.0
offset_top = 231.0
offset_right = 567.0
offset_bottom = 252.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = "(05:20s) 5000"

[node name="HitsTaken" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 311.0
offset_top = 268.0
offset_right = 421.0
offset_bottom = 299.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Hits Taken
"

[node name="HitsTakenValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 463.0
offset_top = 274.0
offset_right = 559.0
offset_bottom = 295.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = "-5000"

[node name="Retries" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 312.0
offset_top = 310.0
offset_right = 390.0
offset_bottom = 341.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Retries"

[node name="RetriesValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 459.0
offset_top = 312.0
offset_right = 505.0
offset_bottom = 333.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = " -5000"

[node name="Seen" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 313.0
offset_top = 349.0
offset_right = 391.0
offset_bottom = 380.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Seen"

[node name="SeenValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 462.0
offset_top = 354.0
offset_right = 508.0
offset_bottom = 375.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = " -5000"

[node name="Kills" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 313.0
offset_top = 393.0
offset_right = 391.0
offset_bottom = 424.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Kills"

[node name="KillsValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 469.0
offset_top = 398.0
offset_right = 515.0
offset_bottom = 419.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = " 5000"

[node name="StealthKills" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 655.0
offset_top = 224.0
offset_right = 787.0
offset_bottom = 255.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Stealth kills"

[node name="StealthKillsValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 868.0
offset_top = 230.0
offset_right = 916.0
offset_bottom = 251.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = " 10000"

[node name="ExplorationBonus" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 654.0
offset_top = 266.0
offset_right = 846.0
offset_bottom = 297.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Exploration Bonus"

[node name="ExplorationBonusValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 871.0
offset_top = 275.0
offset_right = 919.0
offset_bottom = 296.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = " 60000"

[node name="StealthKillBonus" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 655.0
offset_top = 311.0
offset_right = 847.0
offset_bottom = 342.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Stealth kill Bonus"

[node name="StealthKillBonusValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 872.0
offset_top = 320.0
offset_right = 920.0
offset_bottom = 341.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = " 60000"

[node name="RetryBonus" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 652.0
offset_top = 353.0
offset_right = 844.0
offset_bottom = 384.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Retry Bonus"

[node name="RetryBonusValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 877.0
offset_top = 358.0
offset_right = 925.0
offset_bottom = 379.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = "70000"

[node name="NotSeenBonus" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 653.0
offset_top = 390.0
offset_right = 845.0
offset_bottom = 421.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Not seen Bonus"

[node name="NotSeenBonusValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 878.0
offset_top = 395.0
offset_right = 926.0
offset_bottom = 416.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 20
text = "80000"

[node name="Total" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 529.0
offset_top = 461.0
offset_right = 654.0
offset_bottom = 492.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 40
text = "Total"

[node name="TotalValue" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 628.0
offset_top = 468.0
offset_right = 680.0
offset_bottom = 489.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "200000"

[node name="NextLevel" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 786.0
offset_top = 547.0
offset_right = 876.0
offset_bottom = 578.0
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Next Level"

[node name="Quit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 685.0
offset_top = 548.0
offset_right = 766.0
offset_bottom = 587.0
theme_override_fonts/font = ExtResource("1_7kebq")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="NextLevelTimer" type="Timer" parent="Panel"]
process_mode = 3

[node name="QuitTimer" type="Timer" parent="Panel"]
process_mode = 3

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_in0uv")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="SFX" type="Node" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_3q52k")
max_polyphony = 5

[node name="Select" type="AudioStreamPlayer" parent="SFX"]
process_mode = 3
stream = ExtResource("6_aby0i")
max_polyphony = 5

[node name="PressToStart" type="AudioStreamPlayer" parent="SFX"]
process_mode = 3
stream = ExtResource("7_r4hsr")
max_polyphony = 5

[connection signal="mouse_entered" from="Panel/NextLevel" to="." method="_on_next_level_mouse_entered"]
[connection signal="pressed" from="Panel/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="mouse_entered" from="Panel/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Panel/NextLevelTimer" to="." method="_on_next_level_timer_timeout"]
[connection signal="timeout" from="Panel/QuitTimer" to="." method="_on_quit_timer_timeout"]
